force-app/main/default/objects/tc9_edc__Setup_Location__mdt/tc9_edc__Setup_Location__mdt.object-meta.xml
<CustomObject>
    <label>Setup Location</label>
    <pluralLabel>Setup Locations</pluralLabel>
</CustomObject>