force-app/main/default/objects/tc9_edc__Setup_Location__mdt/fields/tc9_edc__State__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>