force-app/main/default/objects/tc9_edc__Setup_Location__mdt/fields/tc9_edc__WorkCover_on_Super_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__WorkCover_on_Super_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkCover on Super Exempt</label>
    <type>Checkbox</type>
</CustomField>